--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>  
 <body>  
-<applet code="First.class" width="300" height="300">  
+<applet code="https://thiruvidhirevanth.github.io/basic-java/house.class" width="300" height="300">  
 </applet>  
 </body>  
 </html>  
